<resources>
    <string name="app_name">EcoPuntos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="msm">Municipalidad de San Miguel</string>
    <string name="tenes">Tenés</string>
    <string name="como_obtener_puntos">¿Cómo obtener más puntos?</string>
    <string name="reciclar">Reciclar</string>
    <string name="canjear_puntos">Canjear puntos</string>
    <string name="localizacion_puntos_verdes">Localización de Puntos Verdes</string>
</resources>
