<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cerraar_sesion"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/reciclar" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reciclar"
            android:icon="@drawable/qr"
            android:title="@string/reciclar" />
        <item
            android:id="@+id/nav_canjear"
            android:icon="@drawable/ic_control_point_black_24dp"
            android:title="@string/canjear_puntos" />
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/localizacion_puntos_verdes" />
    </group>

</menu>
