<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/corredor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tenes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/txtEcoPuntos"
            android:text="156"
            android:textSize="70sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_info_outline_black_24dp"
            android:text="@string/como_obtener_puntos"
            android:id="@+id/btnInfoPuntos"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:stretchColumns="*"
        android:layout_weight="3"
        android:paddingTop="5sp">
        <Button
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/btnReciclar"
            android:background="@drawable/selector_tear"
            android:drawableLeft="@drawable/qr"
            android:text="@string/reciclar"
            android:drawableTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:gravity="center">
        </Button>
        <Button
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/btnCanjearPuntos"
            android:background="@drawable/selector_azul"
            android:drawableLeft="@drawable/ic_control_point_black_24dp"
            android:text="@string/canjear_puntos"
            android:drawableTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:gravity="center">
        </Button>

        <Button
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/btnLocalizacionPuntosVerdes"
            android:background="@drawable/selector_verde_claro"
            android:text="@string/localizacion_puntos_verdes"
            android:drawableLeft="@drawable/ic_map_black_24dp"
            android:drawableTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="18dp">
        </Button>
    </TableLayout>

</LinearLayout>